objects/DCCA_LeTS_Measure_Main__c.object
<CustomObject>
    <description>Main record for tracking bills, resolutions, GOV messages, etc to determine if related to DCCA</description>
    <label>DCCA LeTS Measure</label>
    <nameField>
        <displayFormat>2023-2024-{0000}</displayFormat>
        <label>DCCA LeTS Meas Main Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DCCA LeTS Measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>LeTS_LP_Baseid__c</fullName>
        <label>LeTS LP Baseid</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Div2__c</fullName>
        <label>Div2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Div3__c</fullName>
        <label>Div3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Div4__c</fullName>
        <label>Div4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Div2_Action__c</fullName>
        <label>Div2 Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Div3_Action__c</fullName>
        <label>Div3 Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Div4_Action__c</fullName>
        <label>Div4 Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SetMeasStage__c</fullName>
        <label>SetMeasStage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Division__c</fullName>
        <label>Lead Division</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_Divisions</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Measure_Stage__c</fullName>
        <formula>IF(CONTAINS(SetMeasStage__c,&quot;Introduced&quot;) , &quot;Introduced&quot;, 
 IF(CONTAINS(SetMeasStage__c,&quot;Referred to&quot;) , &quot;Referred&quot;, 
  IF(CONTAINS(SetMeasStage__c,&quot;referred to&quot;) , &quot;Referred&quot;, 
   IF(CONTAINS(SetMeasStage__c,&quot;deferred&quot;) , &quot;Deferred&quot;, 
    IF(CONTAINS(SetMeasStage__c,&quot;Second Reading&quot;) , &quot;Second Reading&quot;, 
     IF(CONTAINS(SetMeasStage__c,&quot;Third Reading&quot;) , &quot;Third Reading&quot;, 
      IF(CONTAINS(SetMeasStage__c,&quot;Received from Senate&quot;) , &quot;First Crossover&quot;, 
       IF(CONTAINS(SetMeasStage__c,&quot;Received from House&quot;) , &quot;First Crossover&quot;, 
        IF(CONTAINS(SetMeasStage__c,&quot;Returned from Senate&quot;) , &quot;Second Crossover&quot;, 
         IF(CONTAINS(SetMeasStage__c,&quot;Returned from House&quot;) , &quot;Second Crossover&quot;, 
          IF(CONTAINS(SetMeasStage__c,&quot;deleted the measure from the public hearing&quot;) , &quot;Removed from public hearing&quot;,  
           IF(CONTAINS(SetMeasStage__c,&quot;Conference Committee&quot;) , &quot;Bill referred to Conference Committee&quot;, 
            IF(CONTAINS(SetMeasStage__c,&quot;Transmitted to Governor&quot;) , &quot;Bill Transmitted to Governor&quot;, 
             IF(CONTAINS(SetMeasStage__c,&quot;Emergency Appropriation&quot;) , &quot;Emergency Appropriation&quot;,  
              IF(CONTAINS(SetMeasStage__c,&quot;Resolution adopted&quot;) , &quot;Resolution Adopted&quot;,  
               IF(CONTAINS(SetMeasStage__c,&quot;Adopted&quot;) , &quot;Adopted&quot;, 
                IF(CONTAINS(SetMeasStage__c,&quot;Certified copies sent&quot;) , &quot;Certified Copies Sent&quot;, 
                 IF(CONTAINS(SetMeasStage__c,&quot;Filed&quot;) , &quot;Filed&quot;, 
                  IF(CONTAINS(SetMeasStage__c,&quot;Received&quot;) , &quot;Received&quot;, 
                   IF(CONTAINS(SetMeasStage__c,&quot;Vetoed&quot;) , &quot;Returned from Governor without approval&quot;, 
                    IF(CONTAINS(SetMeasStage__c,&quot;Carried over&quot;) , &quot;Carried over&quot;,
                     IF(CONTAINS(SetMeasStage__c,&quot;Act&quot;) , &quot;Act&quot;, null
                     )
                    )
                   )
                  )
                 )
                )
               )
              )
             )
            )
           )
          )
         )
        )
       )
      )
     )
    )
   )
  )
 )
)</formula>
        <label>Measure Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Div_Action__c</fullName>
        <label>Lead Div Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DCCA_LeTS_DIV_Action</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Package__c</fullName>
        <label>Meas Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Keywords__c</fullName>
        <description>Measure keywords found in keyword lists</description>
        <label>Keywords</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_PDF_addr__c</fullName>
        <label>DCCA LeTS PDF addr</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_PDF_link__c</fullName>
        <formula>HYPERLINK( DCCA_LeTS_PDF_addr__c ,  DCCA_LeTS_Meas_Identifier__c  )</formula>
        <label>Meas PDF link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Divisions_Track__c</fullName>
        <label>All Divisions Track</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Off</fullName>
                    <default>true</default>
                    <label>Off</label>
                </value>
                <value>
                    <fullName>All Track</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Mail_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DCCA LeTS Mail List</label>
        <referenceTo>DCCA_DO_Mail_List__c</referenceTo>
        <relationshipLabel>DCCA LeTS Measures</relationshipLabel>
        <relationshipName>DCCA_LeTS_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Desc__c</fullName>
        <description>Measure description as provided from HSL site</description>
        <label>Meas Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Link__c</fullName>
        <label>DCCA LeTS Meas Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Referrals__c</fullName>
        <description>Measure committee referrals</description>
        <label>Referrals</label>
        <length>47</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Companion2__c</fullName>
        <label>DCCA LeTS Companion2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Companion3__c</fullName>
        <label>DCCA LeTS Companion3</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Companion4__c</fullName>
        <label>DCCA LeTS Companion4</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Title__c</fullName>
        <description>Measure title as provided from HSL site</description>
        <label>Meas Title</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Introducers__c</fullName>
        <description>Measure introducers</description>
        <label>Introducers</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_baseid__c</fullName>
        <externalId>true</externalId>
        <label>DCCA LeTS Meas baseid</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_DO__c</fullName>
        <label>DCCA LeTS Meas Email DO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_HSL_Link__c</fullName>
        <formula>HYPERLINK( DCCA_LeTS_Meas_Link__c, DCCA_LeTS_Meas_Identifier__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meas HSL Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Appropriations__c</fullName>
        <label>Appropriations</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Current_Status__c</fullName>
        <description>Measure current status entry as provided by HSL site</description>
        <label>Current Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_ASO__c</fullName>
        <label>DCCA LeTS Meas Email ASO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_All__c</fullName>
        <label>DCCA LeTS Meas Email All</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_DCA__c</fullName>
        <label>DCCA LeTS Meas Email DCA</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_DFI__c</fullName>
        <label>DCCA LeTS Meas Email DFI</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_INS__c</fullName>
        <label>DCCA LeTS Meas Email INS</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_OAH__c</fullName>
        <label>DCCA LeTS Meas Email OAH</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_OCP__c</fullName>
        <label>DCCA LeTS Meas Email OCP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_PVL__c</fullName>
        <label>DCCA LeTS Meas Email PVL</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Admin_Indicator__c</fullName>
        <defaultValue>&quot;non-ADMIN&quot;</defaultValue>
        <label>Admin Indicator</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Companion_Links__c</fullName>
        <formula>HYPERLINK(  DCCA_LeTS_Meas_Companion_Link__c ,  DCCA_LeTS_Companion__c  )  &amp; &quot;  &quot; &amp;  HYPERLINK(  DCCA_LeTS_Meas_Companion_Link2__c ,  DCCA_LeTS_Companion2__c  ) &amp; &quot;  &quot; &amp; HYPERLINK(  DCCA_LeTS_Meas_Companion_Link3__c ,  DCCA_LeTS_Companion3__c  ) &amp; &quot;  &quot; &amp; HYPERLINK(  DCCA_LeTS_Meas_Companion_Link4__c ,  DCCA_LeTS_Companion4__c  )</formula>
        <label>Companion Links on HSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_BREG__c</fullName>
        <label>DCCA LeTS Meas Email BREG</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_CATV__c</fullName>
        <label>DCCA LeTS Meas Email CATV</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_ISCO__c</fullName>
        <label>DCCA LeTS Meas Email ISCO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_RICO__c</fullName>
        <label>DCCA LeTS Meas Email RICO</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Identifier__c</fullName>
        <label>Meas Identifier</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_HPEAP__c</fullName>
        <label>DCCA LeTS Meas Email HPEAP</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Main_Report_Title__c</fullName>
        <description>Measure report title as provided from HSL site</description>
        <label>Meas Report Title</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Companion_Link2__c</fullName>
        <label>DCCA LeTS Meas Companion Link2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Companion_Link3__c</fullName>
        <label>DCCA LeTS Meas Companion Link3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Companion_Link4__c</fullName>
        <label>DCCA LeTS Meas Companion Link4</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DCCA_LeTS_Meas_Email_Leg_Coord__c</fullName>
        <label>DCCA LeTS Meas Email Leg Coord</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>LeTS_LP_Records</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>LeTS_LP_Baseid__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>Measure_Stage__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_Identifier__c</field>
            <operation>startsWith</operation>
            <value>LP</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>2023-2024</value>
        </filters>
        <label>LeTS LP Records</label>
    </listViews>
    <listViews>
        <fullName>Prior_Tagged_Meas</fullName>
        <booleanFilter>(1 OR 2) AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>DCCA_LeTS_Meas_Desc__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>PRIOR-HB</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>PRIOR-SB</value>
        </filters>
        <filters>
            <field>Lead_Division__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div2__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div3__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div4__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div5__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <label>Prior Tagged Meas</label>
    </listViews>
    <listViews>
        <fullName>Prior_All_Track_On</fullName>
        <columns>NAME</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>Measure_Stage__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Desc__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>All_Divisions_Track__c</field>
            <operation>equals</operation>
            <value>All Track</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>contains</operation>
            <value>PRIOR-</value>
        </filters>
        <label>Prior All Track On</label>
    </listViews>
    <listViews>
        <fullName>Prior_LeTS_Measures</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>Measure_Stage__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>contains</operation>
            <value>PRIOR-</value>
        </filters>
        <label>Prior LeTS Measures</label>
    </listViews>
    <listViews>
        <fullName>DCCA_LeTS_Prior_Meas</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>Measure_Stage__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>PRIOR-HB</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>PRIOR-SB</value>
        </filters>
        <label>DCCA LeTS Prior Meas</label>
    </listViews>
    <listViews>
        <fullName>Current_LeTS_Measures</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>Measure_Stage__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>notContain</operation>
            <value>PRIOR-</value>
        </filters>
        <label>Current LeTS Measures</label>
    </listViews>
    <listViews>
        <fullName>LeTS_Admin_Meas_2021_2022</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>Measure_Stage__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Admin_Indicator__c</field>
            <operation>startsWith</operation>
            <value>ADMIN</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Admin_Indicator__c</field>
            <operation>startsWith</operation>
            <value>CCA</value>
        </filters>
        <filters>
            <field>Measure_Stage__c</field>
            <operation>notContain</operation>
            <value>Act,Resolution Adopted</value>
        </filters>
        <label>LeTS Admin Meas 2021-2022</label>
    </listViews>
    <listViews>
        <fullName>Prior_Tagged_Meas_by_Bill_Status</fullName>
        <booleanFilter>(1 OR 2) AND (3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>DCCA_LeTS_Meas_Desc__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>PRIOR-HB</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>PRIOR-SB</value>
        </filters>
        <filters>
            <field>Lead_Division__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div2__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div3__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div4__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <filters>
            <field>Div5__c</field>
            <operation>contains</operation>
            <value>ASO,BREG,CATV,DCA,DFI,DO,HPEAP,INS,ISCO,OAH,OCP,PVL,RICO,PVL_Board</value>
        </filters>
        <label>Prior Tagged Meas by Bill Status</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <group>DCCA_LeTS_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Track_On</fullName>
        <columns>NAME</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>Measure_Stage__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Desc__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>All_Divisions_Track__c</field>
            <operation>equals</operation>
            <value>All Track</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>notContain</operation>
            <value>PRIOR-</value>
        </filters>
        <label>Current All Track On</label>
    </listViews>
    <listViews>
        <fullName>DCCA_LeTS_Acts</fullName>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Measure_Stage__c</field>
            <operation>contains</operation>
            <value>Act</value>
        </filters>
        <label>DCCA LeTS Acts</label>
    </listViews>
    <listViews>
        <fullName>DCCA_LeTS_Measures</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>Measure_Stage__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>H</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_baseid__c</field>
            <operation>startsWith</operation>
            <value>S</value>
        </filters>
        <label>DCCA LeTS Measures</label>
    </listViews>
    <listViews>
        <fullName>DCCA_LeTS_Not_Acts</fullName>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_baseid__c</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Referrals__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Measure_Stage__c</field>
            <operation>notEqual</operation>
            <value>Act</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_Identifier__c</field>
            <operation>startsWith</operation>
            <value>SB</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_Identifier__c</field>
            <operation>startsWith</operation>
            <value>HB</value>
        </filters>
        <filters>
            <field>DCCA_LeTS_Meas_Identifier__c</field>
            <operation>notContain</operation>
            <value>GM</value>
        </filters>
        <label>DCCA LeTS Not Acts</label>
    </listViews>
    <listViews>
        <fullName>DCCA_LeTS_HR_Measures</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_Identifier__c</field>
            <operation>startsWith</operation>
            <value>HB</value>
        </filters>
        <label>DCCA LeTS HR Measures</label>
    </listViews>
    <listViews>
        <fullName>DCCA_LeTS_SR_Measures</fullName>
        <columns>NAME</columns>
        <columns>DCCA_LeTS_Meas_Identifier__c</columns>
        <columns>DCCA_LeTS_Package__c</columns>
        <columns>DCCA_LeTS_Admin_Indicator__c</columns>
        <columns>All_Divisions_Track__c</columns>
        <columns>DCCA_LeTS_Current_Status__c</columns>
        <columns>DCCA_LeTS_Main_Report_Title__c</columns>
        <columns>DCCA_LeTS_Meas_Title__c</columns>
        <columns>DCCA_LeTS_Companion_Links__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DCCA_LeTS_Meas_Identifier__c</field>
            <operation>startsWith</operation>
            <value>SR</value>
        </filters>
        <label>DCCA LeTS SR Measures</label>
    </listViews>
    <recordTypes>
        <fullName>PRIORMeas</fullName>
        <active>true</active>
        <description>Read Only records from prior session</description>
        <label>PRIORMeas</label>
    </recordTypes>
    <recordTypes>
        <fullName>Files_Record</fullName>
        <active>true</active>
        <label>Files Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>LeTS_Measure</fullName>
        <active>true</active>
        <description>Measures coming from HSL</description>
        <label>LeTS Measure</label>
    </recordTypes>
    <recordTypes>
        <fullName>LegProposals</fullName>
        <active>true</active>
        <description>Special layout of LeTS Measure to facilitate CRUD of Legislative Proposals</description>
        <label>LegProposals</label>
    </recordTypes>
</CustomObject>